syntax = "proto3";

package rental;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service RentalGrpcService {
  rpc GetRentals(google.protobuf.Empty) returns (RentalResponse);
  rpc GetBookIsAvailable (BookIdsRequest) returns (BookIsAvailableResponse);
  rpc CreateRentals (CreateRentalsRequest) returns (BooleanResponse);
  rpc UpdateRentals (UpdateRentalsRequest) returns (BooleanResponse);
}

message RentalResponse {
  repeated Rental rentals = 1;
}

message Rental {
  int32 id = 1;                                  // 대여 ID
  int32 bookId = 2;                              // 대여한 책 ID
  int32 userId = 3;                              // 대여한 사용자 ID
  google.protobuf.Timestamp rentalDate = 4;      // 대여 시작 날짜
  google.protobuf.Timestamp dueDate = 5;         // 반납해야 하는 날짜
  // 반납 전에는 returnDate가 설정되지 않을 수 있습니다.
  google.protobuf.Timestamp returnDate = 6;      // 실제 반납 날짜
}

message BookIdsRequest {
  repeated int32 bookIds = 1;
}

message BookIsAvailableResponse {
  repeated Book books = 1;
}

message Book {
  int32 bookId = 1;
  bool isAvailable = 2;
}

message CreateRentalsRequest {
  int32 userId = 1;
  repeated int32 bookIds = 2;
}

message UpdateRentalsRequest {
  repeated int32 bookIds = 1;
}

message BooleanResponse {
  bool result = 1;
}
